#4 Fixed Tests for authentication